--- a/index.html
+++ b/index.html
@@ -18,14 +18,75 @@
         width: 100px;
         border: 0 !important;
       }
+      #botao {
+        font-family: Consolas, "Lucida Console", Courier, mono;
+        white-space: nowrap;
+        font-size: 12px;
+        color: rgb(34, 34, 34);
+        padding: 5px;
+        margin-bottom: 30px;
+      }
     </style>
   </head>
   <body>
 
+    <div id="botao">
+      Clique no botão para gerar/copiar a URL deste personagem e compartilhar com outros jogadores. Ela estará salva na área de transferência do seu celular/computador.
+      <br /><br />
+      <button type="button">Copiar URL para compartilhar personagem</button>
+      <span></span>
+    </div>
     <div id="ficha"></div>
 
     <script src="scripts/prettyprint.js"></script>
     <script type="text/javascript">
+
+      function fallbackCopyTextToClipboard(text) {
+        var textArea = document.createElement("textarea");
+        textArea.value = text;
+
+        // Avoid scrolling to bottom
+        textArea.style.top = "0";
+        textArea.style.left = "0";
+        textArea.style.position = "fixed";
+
+        document.body.appendChild(textArea);
+        textArea.focus();
+        textArea.select();
+
+        try {
+          var successful = document.execCommand('copy');
+          var msg = successful ? 'successful' : 'unsuccessful';
+          console.log('Fallback: Copying text command was ' + msg);
+        } catch (err) {
+          console.error('Fallback: Oops, unable to copy', err);
+        }
+
+        document.body.removeChild(textArea);
+      }
+
+      function copyTextToClipboard(text, callback) {
+        if (!navigator.clipboard) {
+          fallbackCopyTextToClipboard(text);
+          return;
+        }
+        navigator.clipboard.writeText(text).then(function() {
+          console.log('Async: Copying to clipboard was successful!');
+          callback(true);
+        }, function(err) {
+          console.error('Async: Could not copy text: ', err);
+          callback(false);
+        });
+      }
+
+      document.querySelector("div#botao > button").addEventListener("click", evento => {
+        let url = window.location.href;
+        copyTextToClipboard(url, resultado => {
+          let msg = "URL copiada!";
+          if (!resultado) msg = "Houve um problema para copiar a URL!";
+          document.querySelector("div#botao > span").textContent = msg;
+        });
+      });
 
       const RACAS = {
         "Humano": {
@@ -36,7 +97,8 @@
           "Sabedoria": { minimo: 3, maximo: 18 },
           "Carisma": { minimo: 3, maximo: 18 },
           ajustes: {},
-          detalhes: []
+          detalhes: [],
+          classes: [ "Guerreiro", "Ranger", "Paladino", "Mago", "Ilusionista", "Clérigo", "Druida", "Ladrão", "Bardo" ]
         },
         "Anão": {
           "Força": { minimo: 8, maximo: 18 },
@@ -87,10 +149,141 @@
           "Carisma": { minimo: 3, maximo: 18 },
           ajustes: { "Destreza": 1, "Força": -1 },
           detalhes: [
-            'Halflings não jogam os dados para obter Força Extraordinária'
+            'Halflings não jogam os dados para obter Força Extraordinária.'
           ]
         }
-      }
+      };
+
+      const CLASSES = {
+        "Guerreiro": {
+          "Habilidades Exigidas": { "Força": 9 },
+          "Pré-Requisitos": [ "Força" ],
+          "Raças Permitidas": [ "Humano", "Anão", "Elfo", "Gnomo", "Meio-Elfo", "Halfling" ],
+          detalhes: [
+            'Um guerreiro com pontuação de 16 ou mais na Força ganha um bônus de 10% para sua experiência em pontos.'
+          ]
+        },
+        "Paladino": {
+          "Habilidades Exigidas": { "Força": 12, "Constituição": 9, "Sabedoria": 13, "Carisma": 17 },
+          "Pré-Requisitos": [ "Força", "Carisma" ],
+          "Raças Permitidas": [ "Humano" ],
+          detalhes: [
+            'Um paladino que tenha valores de Força e Carisma iguais ou maiores que 16 ganha um bônus de 10% em sua experiência em pontos.'
+          ]
+        },
+        "Ranger": {
+          "Habilidades Exigidas": { "Força": 13, "Destreza": 13, "Constituição": 14, "Sabedoria": 14 },
+          "Pré-Requisitos": [ "Força", "Destreza", "Sabedoria" ],
+          "Raças Permitidas": [ "Humano", "Elfo", "Meio-Elfo" ],
+          detalhes: [
+            'Um ranger que tenha valores de Força. Destreza e Sabedoria iguais ou maiores que 16 ganha um bônus de 10% na experiência em pontos.'
+          ]
+        },
+        "Mago": {
+          "Habilidades Exigidas": { "Inteligência": 9 },
+          "Pré-Requisitos": [ "Inteligência" ],
+          "Raças Permitidas": [ "Humano", "Elfo", "Meio-Elfo" ],
+          detalhes: [
+            'Um mago com Inteligência 16 ou mais ganha um bônus de 10% em sua experiência em pontos.'
+          ]
+        },
+        "Abjurante": {
+          "Habilidades Exigidas": { "Inteligência": 9, "Sabedoria": 15 },
+          "Pré-Requisitos": [ "Inteligência" ],
+          "Raças Permitidas": [ "Humano" ],
+          detalhes: [
+            'Um Abjurante (mago especialista) com Inteligência 16 ou mais ganha um bônus de 10% em sua experiência em pontos.'
+          ]
+        },
+        "Conjurador": {
+          "Habilidades Exigidas": { "Constituição": 15, "Inteligência": 9 },
+          "Pré-Requisitos": [ "Inteligência" ],
+          "Raças Permitidas": [ "Humano", "Meio-Elfo" ],
+          detalhes: [
+            'Um Conjurador (mago especialista) com Inteligência 16 ou mais ganha um bônus de 10% em sua experiência em pontos.'
+          ]
+        },
+        "Adivinho": {
+          "Habilidades Exigidas": { "Inteligência": 9, "Sabedoria": 16 },
+          "Pré-Requisitos": [ "Inteligência" ],
+          "Raças Permitidas": [ "Humano", "Elfo", "Meio-Elfo" ],
+          detalhes: [
+            'Um Adivinho (mago especialista) com Inteligência 16 ou mais ganha um bônus de 10% em sua experiência em pontos.'
+          ]
+        },
+        "Feiticeiro": {
+          "Habilidades Exigidas": { "Inteligência": 9, "Carisma": 16 },
+          "Pré-Requisitos": [ "Inteligência" ],
+          "Raças Permitidas": [ "Humano", "Elfo", "Meio-Elfo" ],
+          detalhes: [
+            'Um Feiticeiro (mago especialista) com Inteligência 16 ou mais ganha um bônus de 10% em sua experiência em pontos.'
+          ]
+        },
+        "Ilusionista": {
+          "Habilidades Exigidas": { "Destreza": 16, "Inteligência": 9 },
+          "Pré-Requisitos": [ "Inteligência" ],
+          "Raças Permitidas": [ "Humano", "Gnomo" ],
+          detalhes: [
+            'Um Ilusionista (mago especialista) com Inteligência 16 ou mais ganha um bônus de 10% em sua experiência em pontos.'
+          ]
+        },
+        "Invocador": {
+          "Habilidades Exigidas": { "Constituição": 16, "Inteligência": 9 },
+          "Pré-Requisitos": [ "Inteligência" ],
+          "Raças Permitidas": [ "Humano" ],
+          detalhes: [
+            'Um Invocador (mago especialista) com Inteligência 16 ou mais ganha um bônus de 10% em sua experiência em pontos.'
+          ]
+        },
+        "Necromante": {
+          "Habilidades Exigidas": { "Inteligência": 9, "Sabedoria": 16 },
+          "Pré-Requisitos": [ "Inteligência" ],
+          "Raças Permitidas": [ "Humano" ],
+          detalhes: [
+            'Um Necromante (mago especialista) com Inteligência 16 ou mais ganha um bônus de 10% em sua experiência em pontos.'
+          ]
+        },
+        "Transmutador": {
+          "Habilidades Exigidas": { "Destreza": 15, "Inteligência": 9 },
+          "Pré-Requisitos": [ "Inteligência" ],
+          "Raças Permitidas": [ "Humano", "Meio-Elfo" ],
+          detalhes: [
+            'Um Transmutador (mago especialista) com Inteligência 16 ou mais ganha um bônus de 10% em sua experiência em pontos.'
+          ]
+        },
+        "Clérigo": {
+          "Habilidades Exigidas": { "Sabedoria": 9 },
+          "Pré-Requisitos": [ "Sabedoria" ],
+          "Raças Permitidas": [ "Humano", "Anão", "Elfo", "Gnomo", "Meio-Elfo", "Halfling" ],
+          detalhes: [
+            'O clérigo com 16 ou mais de Sabedoria ganha um bônus de 10% em sua experiência.'
+          ]
+        },
+        "Druida": {
+          "Habilidades Exigidas": { "Sabedoria": 12, "Carisma": 15 },
+          "Pré-Requisitos": [ "Sabedoria", "Carisma" ],
+          "Raças Permitidas": [ "Humano", "Meio-Elfo" ],
+          detalhes: [
+            'Um druida com pontuação de 16 ou mais em Sabedoria e Carisma ganha um bônus de 10% para sua experiência em pontos.'
+          ]
+        },
+        "Ladrão": {
+          "Habilidades Exigidas": { "Destreza": 9 },
+          "Pré-Requisitos": [ "Destreza" ],
+          "Raças Permitidas": [ "Humano", "Anão", "Elfo", "Gnomo", "Meio-Elfo", "Halfling" ],
+          detalhes: [
+            'O ladrão com 16 ou mais de Destreza ganha um bônus de 10% em sua experiência.'
+          ]
+        },
+        "Bardo": {
+          "Habilidades Exigidas": { "Destreza": 12, "Inteligência": 13, "Carisma": 15 },
+          "Pré-Requisitos": [ "Destreza", "Carisma" ],
+          "Raças Permitidas": [ "Humano", "Meio-Elfo" ],
+          detalhes: [
+            'O bardo com 16 ou mais de Destreza e Carisma ganha um bônus de 10% em sua experiência.'
+          ]
+        },
+      };
 
       function rolar1d6(callback) {
         let resultado = Math.floor(Math.random() * 6) + 1;
@@ -189,14 +382,132 @@
         });
       }
 
-      function render() {
-        sortear_atributos(personagem => {
-          sortear_raca(personagem, () => {
-            let output = document.getElementById('ficha');
-            var node = prettyPrint(personagem);
-            document.getElementById('ficha').appendChild(node);
+      function validar_classes_por_habilidades(classes, personagem, callback) {
+        let keys_classes = classes;
+        let keys_habilidades = Object.keys(personagem["Habilidades"]);
+        let classes_permitidas = [];
+
+        keys_classes.forEach((classe,index_classes) => {
+
+          let habilidade_valida = true;
+          keys_habilidades.forEach((habilidade,index_habilidades) => {
+              let valor = personagem["Habilidades"][habilidade]["Valor da Habilidade"];
+              let limite = CLASSES[classe]["Habilidades Exigidas"][habilidade];
+              if (valor < limite) {
+                habilidade_valida = false;
+              }
+
+              if (index_habilidades == (keys_habilidades.length - 1)) {
+                if (habilidade_valida) {
+                  classes_permitidas.push(classe);
+                }
+              }
+          });
+
+          if (index_classes == (keys_classes.length - 1)) {
+            callback(classes_permitidas);
+          }
+        });
+      }
+
+      function validar_classes_por_raca(personagem, callback) {
+        let keys_classes = Object.keys(CLASSES);
+        let classes_permitidas = [];
+
+        keys_classes.forEach((classe,index_classes) => {
+          let keys_racas = CLASSES[classe]["Raças Permitidas"];
+          let classe_permitida = false;
+
+          keys_racas.forEach((raca, index_classe_permitida) => {
+            if (personagem["Raça"] == raca) {
+              classe_permitida = true;
+            }
+
+            if (index_classe_permitida == (keys_racas.length - 1)) {
+              if (classe_permitida) {
+                classes_permitidas.push(classe);
+              }
+            }
+          });
+
+          if (index_classes == (keys_classes.length - 1)) {
+            callback(classes_permitidas);
+          }
+        });
+      }
+
+      function sortear_classe(personagem, callback) {
+        validar_classes_por_raca(personagem, classes => {
+          validar_classes_por_habilidades(classes, personagem, classes_permitidas => {
+            if (classes_permitidas.length == 0) {
+              return { valores_invalidos: true };
+            } else {
+              // definir classe
+              return { valores_invalidos: false };
+            }
           });
         });
+      }
+
+      function render() {
+        obter_dados_personagem(personagem => {
+          let output = document.getElementById('ficha');
+          var node = prettyPrint(personagem);
+          document.getElementById('ficha').appendChild(node);
+        });
+      }
+
+      /*
+      function clonar_personagem(personagem, callback) {
+        let campos = Object.keys(personagem);
+        let copia = {};
+        campos.forEach((campo,index) => {
+          copia[campo] = personagem[campo];
+          if (index == (campos.length - 1)) {
+            callback(copia);
+          }
+        });
+      }
+      */
+
+      function sortear_personagem(callback) {
+
+        sortear_atributos(personagem => {
+          sortear_raca(personagem, () => {
+            sortear_classe(personagem, resultado => {
+              if (valores_invalidos) {
+                sortear_personagem()
+              }
+              callback(personagem);
+            });
+          });
+        });
+      }
+
+      function obter_dados_personagem(callback) {
+        let urlParams = new URLSearchParams(window.location.search);
+        let h = urlParams.get('h');
+        let raca = urlParams.get('r');
+        let habilidades = [];
+
+        // ?h=10,11,12,13,14,15&r=Anão
+        if ( (h != undefined) && (h != null) && (h != '') && (h.length > 0) && (h.split(',').length == 6) ) {
+          let hs = h.split(',');
+          let personagem = {
+            "Habilidades": {
+              "Força": { "Valor da Habilidade": parseInt(hs[0]) },
+              "Destreza": { "Valor da Habilidade": parseInt(hs[1]) },
+              "Constituição": { "Valor da Habilidade": parseInt(hs[2]) },
+              "Inteligência": { "Valor da Habilidade": parseInt(hs[3]) },
+              "Sabedoria": { "Valor da Habilidade": parseInt(hs[4]) },
+              "Carisma": { "Valor da Habilidade": parseInt(hs[5]) },
+            },
+            "Raça": raca
+          };
+          callback(personagem);
+        } else {
+
+        }
       }
 
       render();
